appoint error not appear

--- a/minihospital/appoint/templates/appointment.html
+++ b/minihospital/appoint/templates/appointment.html
@@ -114,7 +114,7 @@
                                 <div class="text-[#3d5279] text-lg font-normal">{{ end_time }}</div>
                             </div>
                         {% else %}
-                            <div class="bg-[#EBEBEB] rounded-[20px] flex space-x-3 py-3 px-5" data-start="{{ start_time }}">
+                            <div class="bg-[#EBEBEB] rounded-[20px] flex space-x-3 py-3 px-5">
                                 <div class="text-[#C8C8C8] text-lg font-normal">{{ start_time }}</div>
                                 <img class="" width="22" height="22" src="{% static 'image/arrow.png' %}" />
                                 <div class="text-[#C8C8C8] text-lg font-normal">{{ end_time }}</div>
